# free_agent

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  dev.ps1  docker-compose.yml  package-lock.json  package.json  start.bat
.github/workflows/: ci.yml  release-deploy.yml  release.yml
claw-code/rust/crates/server/: Cargo.toml
claw-code/rust/crates/server/src/: lib.rs  llm_client.rs  main.rs  state.rs
claw-code/rust/crates/server/src/middleware/: api_key.rs  cors.rs  error_handler.rs  mod.rs  security.rs
claw-code/rust/crates/server/src/routes/: chat.rs  commands.rs  config.rs  files.rs  health.rs  mcp.rs  mod.rs  ws.rs
docs/: FREE_Agent_全面系统性分析报告.md  PROJECT_ANALYSIS_REPORT.md
free_agent/: .editorconfig  .env.example  .gitignore  SECURITY.md  docker-compose.yml  package.json  renovate.json
free_agent/.github/: dependabot.yml
free_agent/frontend/: .prettierignore  eslint.config.js  package-lock.json  package.json  vite.config.ts
free_agent/scripts/: build.sh  dev.sh
frontend/: .env.example  .gitignore  .prettierrc  TEST_REPORT.md  electron-builder.json  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.ts  vitest.config.ts
frontend/.storybook/: main.ts  preview.ts
frontend/e2e/: app.spec.ts  features.spec.ts
frontend/electron/: electron-log.d.ts  main.ts  preload.ts  security-ipc.ts  server-manager.ts  tsconfig.json  window-manager.ts
frontend/public/: manifest.json  (+1 more)
scripts/: build.ps1  dev.ps1  generate-icon.ps1
(+156 files in other folders)
